--- a/Coco bongo.html
+++ b/Coco bongo.html
@@ -104,6 +104,22 @@
             background-color: #128c7e;
         }
 
+        .btn-gmail {
+            display: inline-block;
+            padding: 12px 25px;
+            background-color: #D44638; /* Color de Gmail */
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            margin-top: 20px;
+            transition: background-color 0.3s;
+        }
+
+        .btn-gmail:hover {
+            background-color: #c1351d;
+        }
+
         /* Estilo del footer */
         footer {
             text-align: center;
@@ -126,32 +142,39 @@
         <div class="producto-card">
             <img src="paginas/cocobongo1.jpg" alt="Producto 1">
             <h3>STANDARD</h3>
-            <p>includes entrance fee and open bar domestic beverages, package available from Tuesday to Sunday.
-            </p>
+            <p>Includes entrance fee and open bar with domestic beverages, package available from Tuesday to Sunday.</p>
             <div class="precio">$90</div>
             <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                BOOKING NOW
+                BOOKING WITH WHATSAPP
+            </a>
+            <a href="mailto:example@example.com?subject=Reserva%20Producto%201%20STANDARD&body=Hola,%20me%20interesa%20el%20Producto%201%20STANDARD.%20Por%20favor,%20resérvame." class="btn-gmail">
+                BOOKING WITH GMAIL
             </a>
         </div>
-ss
+
         <div class="producto-card">
             <img src="paginas/cocobongo2.jpeg" alt="Producto 2">
-            <h3>Gold member</h3>
-            <p>includes entrance and Open bar of the Gold member area NOT INCLUDING SEATS package available from Tuesday to Sunday.
-            </p>
+            <h3>Gold Member</h3>
+            <p>Includes entrance and Open bar in the Gold member area, NOT INCLUDING SEATS, available from Tuesday to Sunday.</p>
             <div class="precio">$125</div>
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                BOOKING NOW
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+                BOOKING WITH WHATSAPP
+            </a>
+            <a href="mailto:example@example.com?subject=Reserva%20Producto%202%20Gold%20Member&body=Hola,%20me%20interesa%20el%20Producto%202%20Gold%20Member.%20Por%20favor,%20resérvame." class="btn-gmail">
+                BOOKING WITH GMAIL
             </a>
         </div>
 
         <div class="producto-card">
             <img src="paginas/cocobongo3.webp" alt="Producto 3">
-            <h3>FRONT ROW Vip</h3>
-            <p> includes entrance to FRONT ROW Vip area, with the best view of the shows, in a preferential area (limited number of people) with 💺 seats, Premium drinks and fast entrance. Tuesday packages available</p>
+            <h3>FRONT ROW VIP</h3>
+            <p>Includes entrance to FRONT ROW VIP area, the best view of the shows, preferential seating, Premium drinks, and fast entrance. Tuesday packages available.</p>
             <div class="precio">$190</div>
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                BOOKING NOW
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%203%20FRONT%20ROW%20VIP%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+                BOOKING WITH WHATSAPP
+            </a>
+            <a href="mailto:example@example.com?subject=Reserva%20Producto%203%20FRONT%20ROW%20VIP&body=Hola,%20me%20interesa%20el%20Producto%203%20FRONT%20ROW%20VIP.%20Por%20favor,%20resérvame." class="btn-gmail">
+                BOOKING WITH GMAIL
             </a>
         </div>
     </main>
