--- a/SHOPPING.html
+++ b/SHOPPING.html
@@ -104,6 +104,23 @@
             background-color: #128c7e;
         }
 
+        /* Estilo para el botón de Gmail */
+        .btn-reservar-gmail {
+            display: inline-block;
+            padding: 12px 25px;
+            background-color: #008CBA; /* Color para Gmail */
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            margin-top: 10px;
+            transition: background-color 0.3s;
+        }
+
+        .btn-reservar-gmail:hover {
+            background-color: #005f73;
+        }
+
         /* Estilo del footer */
         footer {
             text-align: center;
@@ -123,33 +140,48 @@
     </header>
 
     <main>
+        <!-- Producto 1 -->
         <div class="producto-card">
             <img src="paginas/shopping1.jpg" alt="Producto 1">
             <h3>1 PAX</h3>
             <p>Immerse yourself in the vibrant culture of the Dominican Republic with a unique shopping experience. Explore local markets and stores where you can find handcrafted souvenirs, traditional Dominican products, and vibrant textiles. Your guide will introduce you to the rich cultural heritage of the island, from locally made cigars to artisan jewelry and tropical spices. Enjoy the opportunity to interact with local artisans and discover the stories behind the crafts. This excursion offers a perfect blend of shopping and culture, allowing you to take home a piece of the Dominican Republic's authentic charm.</p>
             <div class="precio">$FREE</div>
+            <!-- Botones de reserva -->
             <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                BOOKING NOW
+                BOOKING NOW (WhatsApp)
+            </a>
+            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%201&body=Me%20interesa%20reservar%20el%20Producto%201." class="btn-reservar-gmail" target="_blank">
+                BOOKING NOW (Gmail)
             </a>
         </div>
 
+        <!-- Producto 2 -->
         <div class="producto-card">
             <img src="paginas/shopping2.webp" alt="Producto 2">
             <h3>2 PAX</h3>
             <p>Immerse yourself in the vibrant culture of the Dominican Republic with a unique shopping experience. Explore local markets and stores where you can find handcrafted souvenirs, traditional Dominican products, and vibrant textiles. Your guide will introduce you to the rich cultural heritage of the island, from locally made cigars to artisan jewelry and tropical spices. Enjoy the opportunity to interact with local artisans and discover the stories behind the crafts. This excursion offers a perfect blend of shopping and culture, allowing you to take home a piece of the Dominican Republic's authentic charm.</p>
             <div class="precio">$FREE</div>
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                BOOKING NOW
+            <!-- Botones de reserva -->
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+                BOOKING NOW (WhatsApp)
+            </a>
+            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%202&body=Me%20interesa%20reservar%20el%20Producto%202." class="btn-reservar-gmail" target="_blank">
+                BOOKING NOW (Gmail)
             </a>
         </div>
 
+        <!-- Producto 3 -->
         <div class="producto-card">
             <img src="paginas/shopping3.jpg" alt="Producto 3">
             <h3>10 PAX</h3>
             <p>Immerse yourself in the vibrant culture of the Dominican Republic with a unique shopping experience. Explore local markets and stores where you can find handcrafted souvenirs, traditional Dominican products, and vibrant textiles. Your guide will introduce you to the rich cultural heritage of the island, from locally made cigars to artisan jewelry and tropical spices. Enjoy the opportunity to interact with local artisans and discover the stories behind the crafts. This excursion offers a perfect blend of shopping and culture, allowing you to take home a piece of the Dominican Republic's authentic charm.</p>
             <div class="precio">$FREE</div>
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                BOOKING NOW
+            <!-- Botones de reserva -->
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+                BOOKING NOW (WhatsApp)
+            </a>
+            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%203&body=Me%20interesa%20reservar%20el%20Producto%203." class="btn-reservar-gmail" target="_blank">
+                BOOKING NOW (Gmail)
             </a>
         </div>
     </main>
