--- a/los-haitises.html
+++ b/los-haitises.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -107,6 +104,23 @@
             background-color: #128c7e;
         }
 
+        /* Estilo para el botón de Gmail */
+        .btn-reservar-gmail {
+            display: inline-block;
+            padding: 12px 25px;
+            background-color: #008CBA; /* Color para Gmail */
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            margin-top: 10px;
+            transition: background-color 0.3s;
+        }
+
+        .btn-reservar-gmail:hover {
+            background-color: #005f73;
+        }
+
         /* Estilo del footer */
         footer {
             text-align: center;
@@ -126,33 +140,48 @@
     </header>
 
     <main>
+        <!-- Producto 1 -->
         <div class="producto-card">
             <img src="assets/img/haitises1.webp" alt="Producto 1">
             <h3>2 PAX</h3>
             <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
             <div class="precio">$320</div>
+            <!-- Botones de reserva -->
             <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                BOOKING NOW
+                BOOKING NOW (WhatsApp)
+            </a>
+            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%201&body=Me%20interesa%20reservar%20el%20Producto%201." class="btn-reservar-gmail" target="_blank">
+                BOOKING NOW (Gmail)
             </a>
         </div>
 
+        <!-- Producto 2 -->
         <div class="producto-card">
             <img src="assets/img/haitises2.webp" alt="Producto 2">
-            <h3>10 PAX </h3>
+            <h3>10 PAX</h3>
             <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
             <div class="precio">$600</div>
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                BOOKING NOW
+            <!-- Botones de reserva -->
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+                BOOKING NOW (WhatsApp)
+            </a>
+            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%202&body=Me%20interesa%20reservar%20el%20Producto%202." class="btn-reservar-gmail" target="_blank">
+                BOOKING NOW (Gmail)
             </a>
         </div>
 
+        <!-- Producto 3 -->
         <div class="producto-card">
             <img src="assets/img/haitises3.webp" alt="Producto 3">
             <h3>14 PAX</h3>
             <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
             <div class="precio">$700</div>
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                BOOKING NOW
+            <!-- Botones de reserva -->
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+                BOOKING NOW (WhatsApp)
+            </a>
+            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%203&body=Me%20interesa%20reservar%20el%20Producto%203." class="btn-reservar-gmail" target="_blank">
+                BOOKING NOW (Gmail)
             </a>
         </div>
     </main>
@@ -163,6 +192,3 @@
 
 </body>
 </html>
-
-
-
