--- a/private-speedboat-excursion-to-saona-island.html
+++ b/private-speedboat-excursion-to-saona-island.html
@@ -39,7 +39,7 @@
             position: relative;
         }
 
-        /* Botón de regreso */
+        /* Botón de regresar */
         .btn-regresar {
             position: absolute;
             top: 10px;
@@ -104,6 +104,23 @@
             background-color: #128c7e;
         }
 
+        /* Estilo para el botón de Gmail */
+        .btn-reservar-gmail {
+            display: inline-block;
+            padding: 12px 25px;
+            background-color: #008CBA; /* Color para Gmail */
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            margin-top: 10px;
+            transition: background-color 0.3s;
+        }
+
+        .btn-reservar-gmail:hover {
+            background-color: #005f73;
+        }
+
         /* Estilo del footer */
         footer {
             text-align: center;
@@ -123,39 +140,51 @@
     </header>
 
     <main>
+        <!-- Producto 1 -->
         <div class="producto-card">
             <img src="assets/img/private1.jpeg" alt="Producto 1">
             <h3>6 TO 10 PAX</h3>
             <p>Saona Island All-Inclusive + Private Speedboat Excursion
-
                 Enjoy a VIP experience with a private speedboat ride to Saona Island. Relax on the stunning beaches, snorkel in vibrant reefs, and swim in natural pools. Savor an all-inclusive buffet lunch and unlimited drinks. A personalized, unforgettable day in paradise!</p>
             <div class="precio">$1400</div>
+            <!-- Botones de reserva -->
             <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                BOOKING NOW
+                BOOKING NOW (WhatsApp)
+            </a>
+            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%201&body=Me%20interesa%20reservar%20el%20Producto%201." class="btn-reservar-gmail" target="_blank">
+                BOOKING NOW (Gmail)
             </a>
         </div>
 
+        <!-- Producto 2 -->
         <div class="producto-card">
             <img src="assets/img/private2.jpeg" alt="Producto 2">
             <h3>11 TO 15 PAX</h3>
             <p>Saona Island All-Inclusive + Private Speedboat Excursion
-
                 Enjoy a VIP experience with a private speedboat ride to Saona Island. Relax on the stunning beaches, snorkel in vibrant reefs, and swim in natural pools. Savor an all-inclusive buffet lunch and unlimited drinks. A personalized, unforgettable day in paradise!</p>
             <div class="precio">$1900</div>
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                BOOKING NOW
+            <!-- Botones de reserva -->
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+                BOOKING NOW (WhatsApp)
+            </a>
+            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%202&body=Me%20interesa%20reservar%20el%20Producto%202." class="btn-reservar-gmail" target="_blank">
+                BOOKING NOW (Gmail)
             </a>
         </div>
 
+        <!-- Producto 3 -->
         <div class="producto-card">
             <img src="assets/img/private2.jpeg" alt="Producto 3">
             <h3>16 TO 20 PAX</h3>
             <p>Saona Island All-Inclusive + Private Speedboat Excursion
-
                 Enjoy a VIP experience with a private speedboat ride to Saona Island. Relax on the stunning beaches, snorkel in vibrant reefs, and swim in natural pools. Savor an all-inclusive buffet lunch and unlimited drinks. A personalized, unforgettable day in paradise!</p>
             <div class="precio">$2800</div>
-            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
-                BOOKING NOW
+            <!-- Botones de reserva -->
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+                BOOKING NOW (WhatsApp)
+            </a>
+            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%203&body=Me%20interesa%20reservar%20el%20Producto%203." class="btn-reservar-gmail" target="_blank">
+                BOOKING NOW (Gmail)
             </a>
         </div>
     </main>
@@ -166,5 +195,3 @@
 
 </body>
 </html>
-
-
