--- a/HIGUEY CITY TOUR PRIVATE.html
+++ b/HIGUEY CITY TOUR PRIVATE.html
@@ -1,217 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Compra</title>
-    <style>
-        /* Estilo general de la página */
-        body {
-            font-family: Arial, sans-serif;
-            background-image: url('assets/img/buggys3producto.webp');
-            background-size: cover;
-            background-position: center center;
-            background-attachment: fixed;
-            margin: 0;
-            padding: 0;
-            color: #fff;
-        }
-
-        /* Estilo de la tarjeta del producto */
-        .producto-card {
-            max-width: 400px;
-            background-color: rgba(0, 0, 0, 0.616);
-            margin: 50px auto;
-            padding: 17px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .producto-card img {
-            width: 100%;
-            border-radius: 8px;
-        }
-
-        .producto-card h3 {
-            font-size: 24px;
-            color: #fff ;
-            margin-top: 13px;
-        }
-
-        .producto-card p {
-            font-size: 16px;
-            color: #fff;
-            line-height: 1.6;
-            margin-top: 25px;
-        }
-
-        .producto-card .precio {
-            font-size: 20px;
-            font-weight: bold;
-            color: #4CAF50;
-            margin-top: 13px;
-        }
-
-        /* Estilo del formulario */
-        form {
-            margin-top: 17px;
-            margin-bottom: 17px;
-        }
-
-        form label {
-            display: block;
-            font-weight: bold;
-            margin-top: 8px;
-            color: #fdf0f0;
-        }
-
-        form input[type="text"],
-        form input[type="number"],
-        form input[type="email"] {
-            width: 95%;
-            padding: 8px;
-            margin-top: 4px;
-            border: 1px solid #ffffff;
-            border-radius: 4px;
-            font-size: 16px;
-        }
-
-        form button {
-            width: 100%;
-            padding: 10px;
-            background-color: #008CBA;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            font-size: 16px;
-            cursor: pointer;
-            margin-top: 13px;
-        }
-
-        form button:hover {
-            background-color: #45a049;
-        }
-
-        /* Estilo del enlace de reserva */
-        .btn-reservar {
-            display: inline-block;
-            width: 95%;
-            text-align: center;
-            padding: 10px; /* Aseguramos que el tamaño sea igual al botón de Gmail */
-            background-color: #40c351;
-            color: white;
-            font-size: 16px;
-            font-weight: bold;
-            border-radius: 4px;
-            text-decoration: none;
-            margin-top: 13px;
-        }
-
-        .btn-reservar:hover {
-            background-color: #007bb5;
-        }
-
-        /* Estilo para mostrar el precio final */
-        .precio-final {
-            font-size: 18px;
-            font-weight: bold;
-            color: #4CAF50;
-            margin-top: 13px;
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
-
-    <div class="producto-card">
-        <img src="paginas/higuey2.jpg" alt="1 PAX">
-        <h3>Aventura en buggys</h3>
-        <p>Enjoy a fascinating excursion through the Dominican Republic, starting with a visit to a coffee and cacao plantation. Learn about the cultivation process before heading to a tobacco factory to see how the product is made. Explore a local market for authentic crafts and culture, followed by a tour of an ancient church showcasing the country’s history. End with an optional visit to the beautiful Macao Beach for some relaxation</p>
-        <div class="precio">$90</div>
-
-        <!-- Formulario de compra -->
-        <form id="form-compra">
-            <!-- Campo de Nombre -->
-            <label for="nombre"><b>Nombre:</b></label>
-            <input type="text" id="nombre" name="nombre" required>
-
-            <!-- Campo de Apellido -->
-            <label for="apellido"><b>Apellido:</b></label>
-            <input type="text" id="apellido" name="apellido" required>
-
-            <!-- Campo de Correo Electrónico -->
-            <label for="email"><b>Correo Electrónico:</b></label>
-            <input type="email" id="email" name="email" required>
-
-            <!-- Campo de Hotel -->
-            <label for="hotel"><b>Hotel:</b></label>
-            <input type="text" id="hotel" name="hotel" required>
-
-            <!-- Campo de Cantidad de Niños -->
-            <label for="cantidad_ninos"><b>Cantidad de niños:</b></label>
-            <input type="number" id="cantidad_ninos" name="cantidad_ninos" min="0" value="0" oninput="calcularPrecio()" required>
-            
-            <!-- Campo de Cantidad de Adultos -->
-            <label for="cantidad_adultos"><b>Cantidad de adultos:</b></label>
-            <input type="number" id="cantidad_adultos" name="cantidad_adultos" min="0" value="0" oninput="calcularPrecio()" required>
-
-            <button type="button" id="btn-compra">Booking with Gmail</button>
-        </form>
-
-        <!-- Mostrar precio total -->
-        <div class="precio-final" id="precio-total">Precio Total: $0</div>
-
-        <!-- Botón de reserva -->
-        <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" id="btn-reservar" target="_blank">
-            BOOKING with WhatsApp
-        </a>
-    </div>
-
-    <script>
-        // Función para calcular el precio total
-        function calcularPrecio() {
-            const precioBase = 100; 
-            const precioAdultoAdicional = 30; 
-            const precioNino = 45; 
-
-            // Obtener los valores de los campos y convertirlos en enteros
-            const cantidadNinos = parseInt(document.getElementById('cantidad_ninos').value) || 0;
-            const cantidadAdultos = parseInt(document.getElementById('cantidad_adultos').value) || 0;
-
-            let precioTotal = 0;
-
-            // Calcular el precio de los adultos
-            if (cantidadAdultos > 0) {
-                precioTotal += precioBase; 
-                if (cantidadAdultos > 1) {
-                    precioTotal += (cantidadAdultos - 1) * precioAdultoAdicional; 
-                }
-            }
-
-            // Calcular el precio de los niños
-            precioTotal += cantidadNinos * precioNino;
-
-            // Mostrar el precio total con dos decimales
-            const precioTotalFormateado = precioTotal.toFixed(2); // Limita a 2 decimales
-            document.getElementById('precio-total').textContent = 'Precio Total: $' + precioTotalFormateado;
-        }
-
-        // Función para generar el enlace de "Realizar compra" con mailto
-        document.getElementById('btn-compra').addEventListener('click', function() {
-            const nombre = document.getElementById('nombre').value;
-            const apellido = document.getElementById('apellido').value;
-            const email = document.getElementById('email').value;
-            const hotel = document.getElementById('hotel').value;
-            const cantidadNinos = document.getElementById('cantidad_ninos').value;
-            const cantidadAdultos = document.getElementById('cantidad_adultos').value;
-            const precioTotal = document.getElementById('precio-total').textContent.split('$')[1];
-
-            const asunto = "Reserva de Producto - Aventura en Buggys";
-            const cuerpo = `Nombre: ${nombre}\nApellido: ${apellido}\nCorreo: ${email}\nHotel: ${hotel}\nCantidad de niños: ${cantidadNinos}\nCantidad de adultos: ${cantidadAdultos}\nPrecio total: $${precioTotal}`;
-
-            window.location.href = `mailto:rcedanorijo@gmail.com?subject=${encodeURIComponent(asunto)}&body=${encodeURIComponent(cuerpo)}`;
-        });
-    </script>
-
-</body>
-</html>
+Enjoy a fascinating excursion through the Dominican Republic, starting with a visit to a coffee and cacao plantation. Learn about the cultivation process before heading to a tobacco factory to see how the product is made. Explore a local market for authentic crafts and culture, followed by a tour of an ancient church showcasing the country’s history. End with an optional visit to the beautiful Macao Beach for some relaxation
