--- a/Coco bongo.html
+++ b/Coco bongo.html
@@ -135,7 +135,7 @@
     <header>
         <!-- Botón de regresar -->
         <button class="btn-regresar" onclick="window.history.back();">←</button>
-        <h1>Catálogo de Productos</h1>
+        <h1>Product Catalog</h1>
     </header>
 
     <main>
