--- a/HIGUEY CITY TOUR PRIVATE.html
+++ b/HIGUEY CITY TOUR PRIVATE.html
@@ -1,1 +1,185 @@
-Enjoy a fascinating excursion through the Dominican Republic, starting with a visit to a coffee and cacao plantation. Learn about the cultivation process before heading to a tobacco factory to see how the product is made. Explore a local market for authentic crafts and culture, followed by a tour of an ancient church showcasing the country’s history. End with an optional visit to the beautiful Macao Beach for some relaxation
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Catálogo de Producto</title>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+         /* Asegura que el contenido ocupe al menos el 100% de la altura de la ventana */
+         body {
+            font-family: 'Mulish', sans-serif;
+            margin: 0;
+            background-color: #f4f4f4;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            background-image: url('assets/img/basilica.jpg'); /* Imagen de fondo */
+            background-size: cover; /* La imagen cubre toda la pantalla */
+            background-position: center; /* Centra la imagen */
+            background-repeat: no-repeat; /* La imagen no se repite */
+        }
+
+        /* El contenedor principal (header + main) debe ocupar todo el espacio disponible */
+        main {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            padding: 20px;
+            flex-grow: 1; /* Esto asegura que el contenido se expanda para llenar el espacio disponible */
+        }
+
+        /* Estilo del encabezado */
+        header {
+            background-color: #00A8E8;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            position: relative;
+        }
+
+        /* Botón de regreso */
+        .btn-regresar {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            font-size: 1.5rem;
+            background: transparent;
+            border: none;
+            color: white;
+            cursor: pointer;
+        }
+
+        /* Estilo de las tarjetas de productos */
+        .producto-card {
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 300px;
+            margin: 20px;
+            padding: 20px;
+            text-align: center;
+            transition: transform 0.3s ease;
+        }
+
+        .producto-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .producto-card img {
+            width: 100%;
+            border-radius: 8px;
+            height: auto;
+        }
+
+        .producto-card h3 {
+            margin: 15px 0;
+        }
+
+        .producto-card p {
+            color: #777;
+            font-size: 1rem;
+        }
+
+        .producto-card .precio {
+            font-size: 1.2rem;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+
+        .btn-reservar {
+            display: inline-block;
+            padding: 12px 25px;
+            background-color: #25d366; /* Color de WhatsApp */
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            margin-top: 20px;
+            transition: background-color 0.3s;
+        }
+
+        .btn-reservar:hover {
+            background-color: #128c7e;
+        }
+
+        /* Estilo para el botón de Gmail */
+        .btn-reservar-gmail {
+            display: inline-block;
+            padding: 12px 25px;
+            background-color: #008CBA; /* Color para Gmail */
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            margin-top: 10px;
+            transition: background-color 0.3s;
+        }
+
+        .btn-reservar-gmail:hover {
+            background-color: #005f73;
+        }
+
+        /* Estilo del footer */
+        footer {
+            text-align: center;
+            padding: 15px;
+            background-color: #333;
+            color: white;
+            margin-top: auto; /* Esto asegura que el footer se mantenga abajo */
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <!-- Botón de regresar -->
+        <button class="btn-regresar" onclick="window.history.back();">←</button>
+        <h1>Catálogo de Productos</h1>
+    </header>
+
+    <main>
+        <!-- Producto 1 -->
+        <div class="producto-card">
+            <img src="assets/img/basilica.jpg" alt="Producto 1">
+            <h3>1 PAX</h3>
+            <p>Enjoy a cultural tour of Higuey, starting with a visit to the Basilica of Our Lady of Altagracia, an important religious site. Then, explore the public market, where you can see local products and crafts. The tour includes a traditional Dominican lunch and a brief visit to Higuey’s historic center. Perfect for those wanting to experience the culture and traditions of the Dominican Republic's eastern region.</p>
+            <div class="precio">$60</div>
+            <!-- Botones de reserva -->
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+                BOOKING NOW (WhatsApp)
+            </a>
+            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%201&body=Me%20interesa%20reservar%20el%20Producto%201." class="btn-reservar-gmail" target="_blank">
+                BOOKING NOW (Gmail)
+            </a>
+        </div>
+
+        <!-- Producto 2 -->
+        <div class="producto-card">
+            <img src="assets/img/Basílica-de-Nuestra-Señora-de-la-Altagracia-672x372-1.jpg" alt="Producto 2">
+            <h3>1 PAX Private</h3>
+            <p>Private Higuey Tour: Basilica and Public Market
+
+                Enjoy a personalized tour of Higuey, starting with a visit to the Basilica of Our Lady of Altagracia, a key religious site. Next, explore the public market, where you can see local products and crafts. The tour also includes a traditional Dominican lunch at a local restaurant, and a visit to Higuey’s historic center. Ideal for those looking for an intimate experience of the Dominican Republic’s culture and heritage.</p>
+            <div class="precio">$120</div>
+            <!-- Botones de reserva -->
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+                BOOKING NOW (WhatsApp)
+            </a>
+            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%202&body=Me%20interesa%20reservar%20el%20Producto%202." class="btn-reservar-gmail" target="_blank">
+                BOOKING NOW (Gmail)
+            </a>
+        </div>
+
+    
+        </div>
+    </main>
+
+    <footer>
+        <p>© 2024 Mi Tienda Online. Todos los derechos reservados.</p>
+    </footer>
+
+</body>
+</html>
