--- a/isla-catalina-and-snorkel.html
+++ b/isla-catalina-and-snorkel.html
@@ -154,10 +154,10 @@
     <a href="javascript:history.back()" class="btn-regresar">Regresar</a>
 
     <div class="producto-card">
-        <img src="assets/img/Isla-Catalina2.jpg" alt="1 PAX">
+        <img src="assets/img/snorkel2.jpg" alt="1 PAX">
         <h3>Catalina Island</h3>
         <p>Get ready for an exhilarating Polaris adventure through the diverse terrains of the Dominican Republic. Hop into a powerful Polaris vehicle and navigate through rugged trails, lush forests, and scenic landscapes. Your expert guide will lead you through exciting off-road paths, crossing rivers and exploring hidden gems of nature. This off-road adventure offers a thrilling experience while immersing you in the island's beauty, perfect for adrenaline seekers and nature lovers alike. Discover the Dominican Republic in an entirely new way with this unforgettable Polaris experience.</p>
-        <div class="precio">$90</div>
+        <div class="precio">$60</div>
 
         <!-- Formulario de compra -->
         <form id="form-compra">
