--- a/HIGUEY CITY TOUR PRIVATE.html
+++ b/HIGUEY CITY TOUR PRIVATE.html
@@ -168,7 +168,7 @@
             <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW (WhatsApp)
             </a>
-            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%202&body=Me%20interesa%20reservar%20el%20Producto%202." class="btn-reservar-gmail" target="_blank">
+            <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Producto%202&body=Me%20interesa%20reservar%20el%20Producto%202." class="btn-reservar-gmail" target="_blank">
                 BOOKING NOW (Gmail)
             </a>
         </div>
