--- a/SHOPPING.html
+++ b/SHOPPING.html
@@ -153,7 +153,7 @@
             </a>
             
             </a>
-            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%201&body=Me%20interesa%20reservar%20el%20Producto%201." class="btn-reservar-gmail" target="_blank">
+            <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Producto%201&body=Me%20interesa%20reservar%20el%20Producto%201." class="btn-reservar-gmail" target="_blank">
                 BOOKING NOW (Gmail)
             </a>
         </div>
@@ -170,7 +170,7 @@
             </a>
             
             </a>
-            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%202&body=Me%20interesa%20reservar%20el%20Producto%202." class="btn-reservar-gmail" target="_blank">
+            <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Producto%202&body=Me%20interesa%20reservar%20el%20Producto%202." class="btn-reservar-gmail" target="_blank">
                 BOOKING NOW (Gmail)
             </a>
         </div>
@@ -185,14 +185,14 @@
             <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW (WhatsApp)
             </a>
-            <a href="mailto:rcedanorijo@gmail.com?subject=Reserva%20de%20Producto%203&body=Me%20interesa%20reservar%20el%20Producto%203." class="btn-reservar-gmail" target="_blank">
+            <a href="mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Producto%203&body=Me%20interesa%20reservar%20el%20Producto%203." class="btn-reservar-gmail" target="_blank">
                 BOOKING NOW (Gmail)
             </a>
         </div>
     </main>
 
     <footer>
-        <p>© 2024 Mi Tienda Online. Todos los derechos reservados.</p>
+        <p>© 2024 Harmony Excursions. Todos los derechos reservados.</p>
     </footer>
 
 </body>
