--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ html[lang="es"] {
         <a href="haitises.html">
             <img src="assets/img/haitises1.webp" alt="SHOPPING">
         </a>
-        <h2><a href="haitises.html">haitises </a></h2>
+        <h2><a href="haitises.html">Los haitises </a></h2>
         <p>Explore the Haitises, a natural paradise full of breathtaking landscapes and mangroves. </p>
     </div>
     <div class="platilloos tours">
