--- a/isla-catalina-and-snorkel.html
+++ b/isla-catalina-and-snorkel.html
@@ -235,7 +235,7 @@
             var precioTotal = document.getElementById("precio-total").textContent.replace('Precio Total: $', '');
 
             // Crear el mensaje de WhatsApp
-            var mensaje = "Hola, me interesa reservar la aventura en buggys. Aquí están mis datos:\n";
+            var mensaje = "Hola, me interesa reservar la aventura a la Isla Catalina snorkel. Aquí están mis datos:\n";
             mensaje += "Nombre: " + nombre + " " + apellido + "\n";
             mensaje += "Correo electrónico: " + email + "\n";
             mensaje += "Hotel: " + hotel + "\n";
@@ -255,7 +255,7 @@
             btnWhatsApp.style.display = "inline-block"; // Mostrar el enlace de WhatsApp
 
             // Crear el enlace para Gmail
-            var enlaceGmail = "mailto:example@example.com?subject=Reserva%20de%20Producto%20Buggy&body=" + mensajeCodificado;
+            var enlaceGmail = "mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Producto%20Buggy&body=" + mensajeCodificado;
             
             // Mostrar el enlace de Gmail
             var btnGmail = document.getElementById("btn-reservar-gmail");
