--- a/isla-saona-and-diving.html
+++ b/isla-saona-and-diving.html
@@ -155,7 +155,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Mi Tienda Online. Todos los derechos reservados.</p>
+        <p>© 2024 Harmony Excursions. Todos los derechos reservados.</p>
     </footer>
 
 </body>
