--- a/samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA.html
+++ b/samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA.html
@@ -209,7 +209,7 @@
             const asunto = "Reserva de Producto - Aventura en Buggys";
             const cuerpo = `Nombre: ${nombre}\nApellido: ${apellido}\nCorreo: ${email}\nHotel: ${hotel}\nCantidad de niños: ${cantidadNinos}\nCantidad de adultos: ${cantidadAdultos}\nPrecio total: $${precioTotal}`;
 
-            window.location.href = `mailto:rcedanorijo@gmail.com?subject=${encodeURIComponent(asunto)}&body=${encodeURIComponent(cuerpo)}`;
+            window.location.href = `mailto:harmonyexcursions@outlook.com?subject=${encodeURIComponent(asunto)}&body=${encodeURIComponent(cuerpo)}`;
         });
     </script>
 
