--- a/titanboatpuntacana.html
+++ b/titanboatpuntacana.html
@@ -1,4 +1,4 @@
-Enjoy a day of sun and fun on the Titan Boat. Set sail from Punta Cana to explore the Caribbean, with options to visit Saona Island, go snorkeling, and enjoy a party. Onboard, unlimited drinks, music, and a lively party for a unique experience. A perfect day of adventure and relaxation!
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -256,7 +256,7 @@ Enjoy a day of sun and fun on the Titan Boat. Set sail from Punta Cana to explor
             btnWhatsApp.style.display = "inline-block"; // Mostrar el enlace de WhatsApp
 
             // Crear el enlace para Gmail
-            var enlaceGmail = "mailto:example@example.com?subject=Reserva%20de%20Producto%20Buggy&body=" + mensajeCodificado;
+            var enlaceGmail = "mailto:harmonyexcursions@outlook.com?subject=Reserva%20de%20Producto%20Buggy&body=" + mensajeCodificado;
             
             // Mostrar el enlace de Gmail
             var btnGmail = document.getElementById("btn-reservar-gmail");
